--- a/layout.html
+++ b/layout.html
@@ -30,7 +30,7 @@
 <body>
     <main>
         <header>
-            <div id="logo"><img src="src/images/GT-R-logo.png" alt="" width="60px" height="60px" style="border-radius: 50%; margin-left: 10px; margin-top: 5px;"></div>
+            <div id="logo"><img src="src/images/logo.png" alt="" width="60px" height="60px" style="border-radius: 50%; margin-left: 10px; margin-top: 5px;"></div>
             <div id="menu">
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -43,16 +43,22 @@
             </div>
         </header>
         <div id="slide">
-            <img src="src/images/gtr.jpg" alt="" width="1000px">
+            <img src="src/images/page.png" alt="" width="1000px">
         </div>
         <div id="content">
             <div class="subcontent">
                 <h1 style="text-align: center;">About Me</h1>
-                <h3>ชื่อสกุล : ชัยรัตน์ ดวงสอาด</h3>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit perspiciatis quis dicta soluta molestias totam, ad esse repellendus, dignissimos maxime commodi optio laborum doficiis corporis. Officia, obcaecati ad.</p>
+                <p>ชื่อสกุล : ชัยรัตน์ ดวงสอาด</p>
+                <p>Nick : Dooy </p>
+                <p>Phone no: 0959029699</p>
             </div>
-            <div class="subcontent">subcontent2</div>
-            <div class="subcontent">subcontent3</div>
+            <div class="subcontent"><h1 style="text-align: center;">education</h1>
+                <p>มหาลัยราชภัฎนครปฐม</p>
+            </div>
+            <div class="subcontent"><h1 style="text-align: center;">Skills</h1>
+                <p>1.Security</p>
+                <p>2.Programming</p>
+                <p>3.Systems and networks</p>
         </div>
     </main>
     
